# Yoki-Chess-Engine

./: .gitignore  CMakeLists.txt  README.md  project-blueprint.json
src/board/: Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  FENUtils.cpp  FENUtils.h  Move.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h  test_bitboards.cpp
src/core/: CMakeLists.txt  board.cpp  board.h  movegen.cpp  movegen.h  search.cpp  search.h  uci.cpp  uci.h  utils.cpp  utils.h
src/engine/: CMakeLists.txt  Engine.cpp  Engine.h  Evaluation.cpp  Evaluation.h  Search.cpp  Search.h  main.cpp
src/main/: attack_test.cpp  test.cpp  test_bitboards.cpp  test_evaluation.cpp  test_move_undo.cpp  test_optimizations.cpp  test_piece_movement.cpp  test_search.cpp
src/validator/: CMakeLists.txt  main.cpp
